--- a/slides/src/index.html
+++ b/slides/src/index.html
@@ -38,16 +38,17 @@
     <div class="reveal">
       <div class="slides">
         <section
-          data-markdown="chapter/000-example.md"
+          data-markdown="chapter/0010-intro.md"
           data-separator="^\n\n\n"
-          data-separator-vertical="^---\n"
+          data-separator-vertical="^\n\n"
           data-separator-notes="^Note:"
           data-charset="utf-8"
         ></section>
+
         <section
-          data-markdown="chapter/010-example.md"
+          data-markdown="chapter/0020-statements.md"
           data-separator="^\n\n\n"
-          data-separator-vertical="^---\n"
+          data-separator-vertical="^\n\n"
           data-separator-notes="^Note:"
           data-charset="utf-8"
         ></section>
