--- a/slides/src/index.html
+++ b/slides/src/index.html
@@ -53,6 +53,14 @@
           data-charset="utf-8"
         ></section>
 
+        <section
+          data-markdown="chapter/0030-types.md"
+          data-separator="^\n\n\n"
+          data-separator-vertical="^\n\n"
+          data-separator-notes="^Note:"
+          data-charset="utf-8"
+        ></section>
+
       </div>
     </div>
 
