--- a/slides/src/index.html
+++ b/slides/src/index.html
@@ -77,6 +77,14 @@
           data-charset="utf-8"
         ></section>
 
+        <section
+          data-markdown="chapter/0060-loops.md"
+          data-separator="^\n\n\n"
+          data-separator-vertical="^\n\n"
+          data-separator-notes="^Note:"
+          data-charset="utf-8"
+        ></section>
+
       </div>
     </div>
 
