Flow charts, functions (WIP)

--- a/slides/src/index.html
+++ b/slides/src/index.html
@@ -85,6 +85,14 @@
           data-charset="utf-8"
         ></section>
 
+        <section
+          data-markdown="chapter/0070-functions.md"
+          data-separator="^\n\n\n"
+          data-separator-vertical="^\n\n"
+          data-separator-notes="^Note:"
+          data-charset="utf-8"
+        ></section>
+
       </div>
     </div>
 
