--- a/slides/src/index.html
+++ b/slides/src/index.html
@@ -48,6 +48,7 @@
         <section data-markdown="chapter/0085-reference-params.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0090-strings.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0100-arrays.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
+        <section data-markdown="chapter/0200-files.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
       </div>
     </div>
 
