--- a/slides/src/index.html
+++ b/slides/src/index.html
@@ -38,6 +38,7 @@
     <div class="reveal">
       <div class="slides">
         <section data-markdown="chapter/0010-intro.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
+        <section data-markdown="chapter/0012-csharp.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0015-tools.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0020-statements.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0030-types.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
