--- a/slides/src/index.html
+++ b/slides/src/index.html
@@ -44,6 +44,7 @@
         <section data-markdown="chapter/0030-types.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0040-code-blocks.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0050-conditions.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
+        <section data-markdown="chapter/0055-switch.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0060-loops.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0070-methods.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0080-method-params.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
