Move for to separate chapter

--- a/slides/src/index.html
+++ b/slides/src/index.html
@@ -48,6 +48,7 @@
         <section data-markdown="chapter/0060-loops.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0065-exercises.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0066-debugging.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
+        <section data-markdown="chapter/0068-for-loop.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0070-methods.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0080-method-params.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
         <section data-markdown="chapter/0085-reference-params.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n" data-separator-notes="^Note:" data-charset="utf-8"></section>
